--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/http/server.ts"
+    "dev": "tsx watch src/http/server.ts",
+    "build": "tsc --build src"
   },
   "dependencies": {
     "fastify": "^5.2.1"
