--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@fastify/postgres": "^6.0.2",
+    "ejs": "^3.1.10",
     "fastify": "^5.2.1",
     "pg": "^8.14.1"
   },
